# asr-serve

./: LICENSE  README.md
agentic-factory/: README.md  go.mod  main.go  main_test.go
agentic-factory/configs/: factory.yaml
agentic-factory/src/: agent_hints.py  evaluator.py  mcp_client.py  nat_agent.py
agentic-factory/tests/: test_factory.py
dynamo-orchestration/: Cargo.toml  README.md
dynamo-orchestration/configs/: dynamo_cluster.yaml
dynamo-orchestration/src/: dynamo_worker.py  main.rs  nixl_rdma.py  router.py
inference/: README.md
inference/configs/: blackwell_optimizations.yaml  llm_d_worker.yaml  vllm_worker.yaml
inference/src/: worker.py
vad-edge/: CMakeLists.txt  README.md
vad-edge/src/: dpdk_pipeline.c  vad_loader.c  xdp_vad.c
vad-edge/wasm/: vad_module.wat
