# SPDX-License-Identifier: BSD-2-Clause-Patent
[package]
name    = "dynamo-shim"
version = "0.1.0"
edition = "2021"
description = "High-throughput Dynamo orchestration shim for asr-serve PDD"
license = "BSD-2-Clause-Patent"

[[bin]]
name = "dynamo-shim"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1",   features = ["full"] }
# HTTP/gRPC transport (Dynamo uses gRPC internally)
tonic          = { version = "0.11" }
prost          = { version = "0.12" }
# Observability
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
serde          = { version = "1",   features = ["derive"] }
serde_yaml     = { version = "0.9" }
# CLI
clap           = { version = "4",   features = ["derive"] }
# Metrics
prometheus     = { version = "0.13" }

[dev-dependencies]
tokio-test = "0.4"
